feat(auth): Blacklisting JWTs
